--- a/CohereBot.ipynb
+++ b/CohereBot.ipynb
@@ -1,33 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "mhGg-ypRrnes",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "mhGg-ypRrnes",
         "outputId": "ab083379-7d68-442c-ca67-7733991515ee"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting cohere\n",
             "  Downloading cohere-4.37-py3-none-any.whl (48 kB)\n",
@@ -65,21 +51,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install --upgrade cohere"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "DQcFyyv0rpfx",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "DQcFyyv0rpfx",
         "outputId": "9f08464b-450b-4c8e-e321-25beda4480e2"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: cohere in /usr/local/lib/python3.10/dist-packages (4.37)\n",
             "Requirement already satisfied: aiohttp<4.0,>=3.0 in /usr/local/lib/python3.10/dist-packages (from cohere) (3.9.1)\n",
@@ -100,25 +83,25 @@
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.25.0->cohere) (2023.11.17)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install --upgrade cohere"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install gradio"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "YcpuRL9u0oZo",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "YcpuRL9u0oZo",
         "outputId": "08b0b593-269c-4a6a-baff-e4d87dfb8213"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting gradio\n",
             "  Downloading gradio-4.8.0-py3-none-any.whl (16.5 MB)\n",
@@ -244,17 +227,25 @@
             "\u001b[0mSuccessfully installed aiofiles-23.2.1 annotated-types-0.6.0 colorama-0.4.6 fastapi-0.104.1 ffmpy-0.3.1 gradio-4.8.0 gradio-client-0.7.1 h11-0.14.0 httpcore-1.0.2 httpx-0.25.2 orjson-3.9.10 pydantic-2.5.2 pydantic-core-2.14.5 pydub-0.25.1 python-multipart-0.0.6 semantic-version-2.10.0 shellingham-1.5.4 starlette-0.27.0 tomlkit-0.12.0 typing-extensions-4.9.0 uvicorn-0.24.0.post1 websockets-11.0.3\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install gradio"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6Ab2wKUyrrgj"
+      },
+      "outputs": [],
       "source": [
         "import cohere\n",
         "from transformers import pipeline\n",
         "import numpy as np\n",
         "import gradio as gr\n",
         "\n",
-        "co = cohere.Client('TC2orS2avSS7jv34lvmOefcAGxikFZLabbpkw7oZ')\n",
+        "co = cohere.Client('zzz')\n",
         "\n",
         "transcriber = pipeline(\"automatic-speech-recognition\", model=\"openai/whisper-base.en\")\n",
         "\n",
@@ -264,15 +255,15 @@
         "    y /= np.max(np.abs(y))\n",
         "\n",
         "    return transcriber({\"sampling_rate\": sr, \"raw\": y})[\"text\"]\n"
-      ],
-      "metadata": {
-        "id": "6Ab2wKUyrrgj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZYVR5SfIzMOc"
+      },
+      "outputs": [],
       "source": [
         "chat_history = []\n",
         "def unified_process(input_data):\n",
@@ -287,24 +278,11 @@
         "    urls_string = '\\n'.join(urls)\n",
         "\n",
         "    return response.text + f\"\\n Here are my sources \\n - {urls_string}\""
-      ],
-      "metadata": {
-        "id": "ZYVR5SfIzMOc"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "demo = gr.Interface(\n",
-        "    unified_process,\n",
-        "    inputs = gr.Audio(sources=[\"microphone\"]),\n",
-        "    outputs = \"text\"\n",
-        ")\n",
-        "\n",
-        "demo.launch()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -313,11 +291,10 @@
         "id": "lF_fUxkAbrnc",
         "outputId": "0d93e2a8-9058-4fc2-88c6-671a22bce1da"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Setting queue=True in a Colab notebook requires sharing enabled. Setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
             "\n",
@@ -328,35 +305,58 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "<div><iframe src=\"https://9ef5c9cfa09ad4654c.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": []
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "demo = gr.Interface(\n",
+        "    unified_process,\n",
+        "    inputs = gr.Audio(sources=[\"microphone\"]),\n",
+        "    outputs = \"text\"\n",
+        ")\n",
+        "\n",
+        "demo.launch()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "Xtt8UexKOQ6c"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
